--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <!--Suppression meta balise "keywords"-->
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="description" content="Entreprise Webdesign de lyon - Site de l'agence la panthère qui est une grande agence de webdesign basée à Lyon. Concevez avec leur aide le design idéal et moderne.">
+    <!--Ajout d'une description qui contient les mots clés principaux-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
