--- a/page2.html
+++ b/page2.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <!--Suppression meta balise "keywords"-->
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="description" content="Page contact du site de l'agence de webdesign La panthère basée à Lyon. N'hésitez pas à leur adresser un message ou directement vous rendre à Lyon dans l'agence de webdesign La panthère.">
+    <!--Ajout d'une description qui contient les mots clés principaux-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
