--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
-    <title>.</title>
-
+    <title>Entreprise Webdesign Lyon - Agence de webdesign La panthère.</title>
+	<!--Modification title-->
     
 <!-- Analytics -->
  
