--- a/page2.html
+++ b/page2.html
@@ -19,8 +19,8 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
-
+    <title>Page contact Entreprise Webdesign Lyon - Agence de webdesign La panthère.</title>
+	<!--Modification title-->
     
 <!-- Analytics -->
  
