--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
+<!--Ajout d'une langue-->
 <head>
     <meta charset="utf-8">
     <!--Suppression meta balise "keywords"-->
