--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>
 </section>
 
-<section>
+<section class="mobile">
 <div class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
 		<div class="row">
@@ -133,7 +133,7 @@
 </div>
 </section>
 
-<section>
+<section class="mobile">
 <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace black-background">
@@ -150,7 +150,7 @@
 </div>
 </section>
 
-<section>
+<section class="mobile">
 <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
