--- a/page2.html
+++ b/page2.html
@@ -76,11 +76,12 @@
 </section>
 
 <section>
+<h2>Formulaire</h2>
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" >
 					<div class="form-group">
 						<label>
 							Nom
@@ -119,9 +120,9 @@
 </div>
 </section>
 
-<section>
+
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-</section>
+
 </main>
 
 <footer>
