--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 				<img alt="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractive et visible sur internet." src="img/titlecomp.png" />
 				<!--Modification du alt-->
 			</div>
+			<div>
+				L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractive et visible sur internet.
+			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
@@ -128,6 +131,9 @@
 				<!--Modification du alt-->
 
 			</div>
+			<div>
+				L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon. Citation de Maxime Guibard, PDG de A vos fourchettes.
+			</div>
 		</div>
 	</div>
 </div>
@@ -158,10 +164,13 @@
 				<img alt="Nous travaillons avec beaucoup de clients, voici nos réalisations." src="img/title2comp.png" />
 				<!--Modification du alt-->
 			</div>
+			<div>
+				Nous travaillons avec beaucoup de clients, voici nos réalisations.
+			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1comp.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1comp.jpg" alt="Image de la réalisation par l'entreprise de webdesign Lyon de la refonte d'un site de journal à Lyon." class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/1comp.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1comp.jpg" alt="Réalisation par l'entreprise de webdesign Lyon de la refonte d'un site de journal." class="img-responsive portfolio-thumb" /></a>
 				<!--Modification du alt-->
 				<h2 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
