--- a/index.html
+++ b/index.html
@@ -83,11 +83,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractive et visible sur internet." src="img/titlecomp.png" />
-				<!--Modification du alt-->
-			</div>
-			<div>
-				L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractive et visible sur internet.
+				<div class="txt-img">
+					L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractive et visible sur internet.
+				</div>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -127,13 +125,12 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon. Citation de Maxime Guibard, PDG de A vos fourchettes." src="img/citationcomp.png" />
-				<!--Modification du alt-->
-
+				<h3>
+					"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br>
+				</h3>
+				<quote class="quote">Maxime Guibard, PDG de A vos fourchettes.</quote>
 			</div>
-			<div>
-				L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon. Citation de Maxime Guibard, PDG de A vos fourchettes.
-			</div>
+			
 		</div>
 	</div>
 </div>
@@ -161,12 +158,11 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="Nous travaillons avec beaucoup de clients, voici nos réalisations." src="img/title2comp.png" />
-				<!--Modification du alt-->
+				<h3>
+					Nous travaillons avec beaucoup de clients, voici nos réalisations.
+				</h3>
 			</div>
-			<div>
-				Nous travaillons avec beaucoup de clients, voici nos réalisations.
-			</div>
+			
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
