--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					Web design
 				</h2>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -128,7 +128,7 @@
 				<h3>
 					"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."<br>
 				</h3>
-				<quote class="quote">Maxime Guibard, PDG de A vos fourchettes.</quote>
+				<div class="quote">Maxime Guibard, PDG de A vos fourchettes.</div>
 			</div>
 			
 		</div>
