--- a/index.html
+++ b/index.html
@@ -239,22 +239,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://www.twitter.com"> <span class="fa fa-twitter icon-md"></span></a>
+							<a class="social black" href="http://www.twitter.com">Twitter<span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://www.facebook.com"> <span class="fa fa-facebook icon-md"></span></a>
+							<a class="social black" href="http://www.facebook.com">Facebook<span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://www.dribble.com"> <span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social black" href="http://www.dribble.com">Dribble<span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="http://www.instagram.com"> <span class="fa fa-instagram icon-md"></span></a>
+							<a class="social black" href="http://www.instagram.com">Instagram<span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 					
